--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "./dist/vm.js",
   "typings": "./dist/vm.d.ts",
   "scripts": {
-    "test": "rm -rf ./build && tsc -p ./ && nyc ava ./build/test ./build/src/**/*.test.js",
-    "build": "rm -rf ./dist && webpack --display-error-details --progress --colors",
-    "start": "npm run build && parcel ./doc/index.html -d vm.js",
+    "test": "rimraf -rf ./build && tsc -p ./ && nyc ava ./build/test ./build/src/**/*.test.js",
+    "build": "rimraf -rf ./dist && webpack --watch --display-error-details --progress --colors",
+    "start": "parcel ./doc/index.html -d vm.js",
     "docs": "npm run build && npx parcel build doc/index.html -d ./vm.js --public-url /vm.js && gh-pages -d ./vm.js",
     "format": "prettier --write ./src/**/*.ts ./test/**/*.ts",
     "tslint-check": "tslint-config-prettier-check ./tslint.json",
@@ -35,6 +35,7 @@
     "@types/node": "9.6.55",
     "@types/webpack": "4.41.2",
     "ava": "0.25.0",
+    "babel-core": "^6.26.3",
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
     "coveralls": "3.0.9",
